# Bolder-Game-Engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Readme.md  Readme.org  Todo.org  appveyor.yml
Engine/: CMakeLists.txt
Engine/Application/: CMakeLists.txt
Engine/Application/include/bolder/: application.hpp  engine.hpp
Engine/Application/src/: application.cpp  engine.cpp
Engine/Assets/: CMakeLists.txt  dummy.cpp
Engine/Assets/shaders/: sprite.frag  sprite.vert
Engine/Core/: CMakeLists.txt
Engine/Core/include/bolder/: engine.hpp  event.hpp  exception.hpp  handle.hpp  handle_manager.hpp  image.hpp  matrix.hpp  resource.hpp  resource_error.hpp  system.hpp
Engine/Core/include/bolder/events/: input_events.hpp  window_resize.hpp
Engine/Core/src/: engine.cpp  file_util.cpp  image.cpp  resource.cpp  resource_error.cpp  system.cpp
Engine/Core/test/: CMakeLists.txt  angle_test.cpp  entity_test.cpp  event_test.cpp  handle_test.cpp  logger_test.cpp  math_test.cpp  string_literal_test.cpp
Engine/Graphics/: CMakeLists.txt
Engine/Graphics/include/bolder/: backend.hpp  graphics_system.hpp  renderer.hpp
Engine/Graphics/include/bolder/graphics/: backend.hpp  draw_call.hpp  image.hpp  renderer.hpp  resource_handles.hpp  sprite.hpp
Engine/Graphics/src/: graphics_system.cpp  image.cpp  renderer.cpp
Engine/Graphics/test/: CMakeLists.txt  sprite_test.cpp
Engine/OpenGL/: CMakeLists.txt
Engine/OpenGL/include/bolder/: opengl_buffer.hpp  opengl_context.hpp  opengl_graphics_backend.hpp  opengl_program.hpp  opengl_shader.hpp  opengl_shader_program.hpp  opengl_texture.hpp  opengl_vertex_array.hpp
Engine/OpenGL/src/: OpenGL_graphics_backend.cpp  index_buffer.hpp  opengl.cpp  opengl_buffer.cpp  opengl_buffer.hpp  opengl_context.cpp  opengl_graphics_system_backend.cpp  opengl_program.cpp  opengl_program.hpp  opengl_renderer_backend.cpp  opengl_shader.cpp  opengl_shader.hpp  opengl_shader_program.cpp  opengl_texture.cpp  opengl_texture.hpp  opengl_vertex_array.cpp  opengl_vertex_array.hpp  texture.cpp  texture.hpp  vertex_buffer.hpp
Engine/OpenGL/test/: CMakeLists.txt  main.cpp  shader_test.cpp
Engine/Platform/: CMakeLists.txt  Readme.md
Engine/Platform/include/bolder/: display.hpp  input.hpp
Engine/Platform/src/: display_glfw.cpp
Engine/Utilities/: CMakeLists.txt  Readme.md
Engine/Utilities/include/bolder/: angle.hpp  byte.hpp  date_time.hpp  exception.hpp  file_util.hpp  integer.hpp  log_level.hpp  log_message.hpp  log_policy.hpp  logger.hpp  math.hpp  matrix.hpp  string_literal.hpp  transform.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector.hpp
Engine/Utilities/src/: angle.cpp  date_time.cpp  exception.cpp  file.cpp  file_util.cpp  log_level.cpp  log_message.cpp  log_policy.cpp  logger.cpp  math.cpp  matrix.cpp  transform.cpp  vec2.cpp  vec3.cpp  vec4.cpp  vector.cpp
Engine/Utilities/test/: CMakeLists.txt  angle_test.cpp  logger_test.cpp  math_test.cpp  matrix_test.cpp  string_literal_test.cpp  transform_test.cpp  vector_test.cpp
core/: CMakeLists.txt
core/include/bolder/: engine.hpp
core/include/bolder/util/: log_policy.hpp
core/platform/: CMakeLists.txt
core/platform/src/: display_glfw.cpp
core/src/bolder/: engine.cpp  exception.cpp
core/src/bolder/math/: angle.cpp
core/src/bolder/util/: log_policy.cpp  logger.cpp
core/test/: CMakeLists.txt  entity_test.cpp
demo/: CMakeLists.txt
demo/src/: main.cpp
docs/src/: Doxyfile.in
lib/: CMakeLists.txt
lib/include/bolder/: engine.hpp  exception.hpp
lib/include/bolder/math/: angle.hpp  math.hpp
lib/include/bolder/util/: date_time.hpp  log_level.hpp  log_message.hpp  log_policy.hpp  logger.hpp  string_literal.hpp  string_literal_test.cpp
lib/include/util/: log_policy.hpp
lib/src/bolder/util/: date_time.cpp  log_level.cpp  log_message.cpp  log_policy.cpp  logger.cpp
lib/src/math/: math.cpp
lib/src/util/: log_level.cpp  log_policy.cpp  logger.cpp
lib/test/: CMakeLists.txt  angle_test.cpp  logger_test.cpp  math_test.cpp
scripts/cmake/: SetGLFW.cmake  compiler.cmake  doxygen.cmake
