#configure variables
set (PLATFORM_LAYER_NAME "${ENGINE_CORE_NAME}Platform")

#configure directories
set (PLATFORM_LAYER_MODULE_PATH "${ENGINE_CORE_MODULE_PATH}/platform")
set (PLATFORM_LAYER_SRC_PATH "${PLATFORM_LAYER_MODULE_PATH}/src")
set (PLATFORM_LAYER_INCLUDE_PATH "${PLATFORM_LAYER_MODULE_PATH}/include")

include_directories (
    ${PLATFORM_LAYER_INCLUDE_PATH}
    ${ENGINE_CORE_INCLUDE_PATH}
    ${THIRD_PARTY_INCLUDE_PATH})

#set sources
file (GLOB_RECURSE PLATFORM_HEADER_FILES "${PLATFORM_LAYER_INCLUDE_PATH}/*.hpp")
file (GLOB_RECURSE PLATFORM_SOURCE_FILES "${PLATFORM_LAYER_SRC_PATH}/*.hpp")
file (GLOB_RECURSE PLATFORM_SOURCE_FILES "${PLATFORM_LAYER_SRC_PATH}/*.cpp")

# Engine
add_library (${PLATFORM_LAYER_NAME} STATIC
    ${PLATFORM_SOURCE_FILES} ${PLATFORM_HEADER_FILES})

target_link_libraries (${PLATFORM_LAYER_NAME} ${THIRD_PARTY_LIBS})

# Export variables#configure variables
set (PLATFORM_LAYER_NAME ${PLATFORM_LAYER_NAME} PARENT_SCOPE)
set (PLATFORM_LAYER_INCLUDE_PATH ${PLATFORM_LAYER_INCLUDE_PATH} PARENT_SCOPE)
